[package]
name = "cas-attrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
ariadne = "0.2.0"
cas-eval = { path = "../cas-eval" }
cas-error = { path = "../cas-error" }

[dependencies]
quote = "^1.0"
syn = { version = "^2.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0.66"
