[package]
name = "cas-attrs"
description = "Derive macros for cas-error's ErrorKind and cas-compute's Builtin traits"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["derive", "proc-macro", "cas", "calcscript"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
ariadne = "0.2.0"
cas-compute = { path = "../cas-compute" }
cas-error = { path = "../cas-error" }

[dependencies]
quote = "^1.0"
syn = { version = "^2.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "1.0.66"
