[package]
name = "cas-compiler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
cas-attrs = { version = "0.2.0", path = "../cas-attrs" }
cas-compute = { version = "0.2.0", path = "../cas-compute" }
cas-error = { version = "0.2.0", path = "../cas-error" }
cas-parser = { version = "0.2.0", path = "../cas-parser" }
