[package]
name = "cas-compiler"
description = "Bytecode compiler for CalcScript programs"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "codegen", "math-language", "bytecode", "evaluation"]
categories = ["compilers", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
cas-attrs = { version = "0.2.0", path = "../cas-attrs" }
cas-compute = { version = "0.2.0", path = "../cas-compute" }
cas-error = { version = "0.2.0", path = "../cas-error" }
cas-parser = { version = "0.2.0", path = "../cas-parser" }
