[package]
name = "cas-error"
description = "Error type for generic errors in CalcScript"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "error"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cas-attrs = { version = "0.2.0", path = "../cas-attrs" }
strip-ansi-escapes = "0.2.1"

[dependencies]
ariadne = "0.2.0"
