[package]
name = "cas-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cas-attrs]
path = "../cas-attrs"

[dependencies.cas-error]
path = "../cas-error"

[dependencies.cas-parser]
path = "../cas-parser"

[dependencies]
ariadne = "0.2.0"
levenshtein = "1.0.5"
once_cell = "1.18.0"
rug = "1.20.1"
