[package]
name = "cas-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18.2", features = ["png"] }
cas-compiler = { path = "../cas-compiler" }
cas-compute = { path = "../cas-compute" }
cas-error = { path = "../cas-error" }
cas-parser = { path = "../cas-parser" }
cas-vm = { path = "../cas-vm" }
rayon = "1.7.0"
