[package]
name = "cas-graph"
description = "A customizable graphing calculator for CalcScript"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "graphing", "calculator", "customizable"]
categories = ["mathematics", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18.2", features = ["png"] }
cas-compute = { path = "../cas-compute" }
cas-parser = { path = "../cas-parser" }
rayon = "1.7.0"
