[package]
name = "cas-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_float_eq = "1.1.3"
pretty_assertions = "1.3.0"

[dependencies.cas-eval]
path = "../cas-eval"

[dependencies.cas-parser]
path = "../cas-parser"

[dependencies]
rug = "1.22.0"
