[package]
name = "cas-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies.cas-attrs]
path = "../cas-attrs"

[dependencies.cas-error]
path = "../cas-error"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true

[dependencies]
ariadne = "0.2.0"
logos = "0.14"
