[package]
name = "cas-parser"
description = "Parser for the CalcScript language"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "parser", "lexer", "calculator"]
categories = ["mathematics", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions = "1.3.0"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]
optional = true

[dependencies]
ariadne = "0.2.0"
cas-attrs = { version = "0.2.0", path = "../cas-attrs" }
cas-error = { version = "0.2.0", path = "../cas-error" }
logos = "0.14"
