[package]
name = "cas-rs"
description = "A CalcScript executor and REPL."
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
categories = ["mathematics", "compilers", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ariadne = "0.2.0"

[dependencies]
cas-compute = { version = "0.2.0", path = "../cas-compute", default-features = false, features = ["numerical"] }
cas-error = { version = "0.2.0", path = "../cas-error" }
cas-parser = { version = "0.2.0", path = "../cas-parser" }
cas-vm = { version = "0.2.0", path = "../cas-vm" }
rustyline = "13.0.0"
