[package]
name = "cas-unit-convert"
description = "Unit conversion library for CalcScript"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "unit", "convert", "conversion"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"
assert_float_eq = "1.1.3"
rustyline = "13.0.0"
