[package]
name = "cas-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cas-compiler = { path = "../cas-compiler" }
cas-compute = { path = "../cas-compute" }
cas-parser = { path = "../cas-parser" }
rug = "1.22.0"
