[package]
name = "cas-vm"
description = "Virtual machine that executes CalcScript bytecode"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElectrifyPro/cas-rs"
keywords = ["calcscript", "vm", "interpreter", "math", "scripting"]
categories = ["mathematics", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
cas-attrs = { version = "0.2.0", path = "../cas-attrs" }
cas-compiler = { version = "0.2.0", path = "../cas-compiler" }
cas-compute = { version = "0.2.0", path = "../cas-compute" }
cas-error = { version = "0.2.0", path = "../cas-error" }
cas-parser = { version = "0.2.0", path = "../cas-parser" }
replace_with = "0.1.7"
rug = "1.22.0"
